Background image cutoff fixed

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,13 +1,7 @@
-body{
-}
-
 body, html {
     margin: 0;
     padding: 0;
     height: 100%;
-}
-
-.overlay {
     position: relative;
     width: 100%;
     height: 100%;
@@ -21,7 +15,7 @@ body, html {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.3); /* Adjust the last value (0.5) to control the opacity of the black overlay */
+    background-color: rgba(0, 0, 0, 0.3); 
 }
 
 .content {
